fix: fix failing tests in windows