@@ -11,7 +11,6 @@ import static java.nio.charset.StandardCharsets.UTF_8;
 
 import com.yahoo.elide.modelconfig.DynamicConfigHelpers;
 import com.yahoo.elide.modelconfig.store.models.ConfigFile;
-import org.apache.commons.io.IOUtils;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.support.PathMatchingResourcePatternResolver;
 
@@ -20,6 +19,8 @@ import lombok.extern.slf4j.Slf4j;
 
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
+import java.net.URI;
 import java.nio.file.Files;
 import java.util.LinkedHashMap;
 import java.util.Locale;
@@ -46,8 +47,8 @@ public class FileLoader {
     private final PathMatchingResourcePatternResolver resolver;
 
     private static final Function<Resource, String> CONTENT_PROVIDER = (resource) -> {
-        try {
-            return IOUtils.toString(resource.getInputStream(), UTF_8);
+        try (InputStream inputStream = resource.getInputStream()) {
+            return new String(inputStream.readAllBytes(), UTF_8);
         } catch (IOException e) {
             log.error ("Error converting stream to String: {}", e.getMessage());
             throw new IllegalStateException(e);
@@ -101,7 +102,15 @@ public class FileLoader {
      */
     public Map<String, ConfigFile> loadResources() throws IOException {
         Map<String, ConfigFile> resourceMap = new LinkedHashMap<>();
-        int configDirURILength = resolver.getResources(this.rootURL)[0].getURI().toString().length();
+        URI configDirURI = resolver.getResources(this.rootURL)[0].getURI();
+        String configDirURIString = configDirURI.toString();
+        int configDirURILength = configDirURIString.length();
+        if (configDirURIString.startsWith(FILEPATH_PATTERN) && !configDirURIString.startsWith(FILEPATH_PATTERN + "/")) {
+            // URI for configDir is missing slash the ie file:path and not file:/path and spring
+            // resolver will return with file:/path
+            // See https://github.com/spring-projects/spring-framework/issues/29275
+            configDirURILength += 1;
+        }
 
         Resource[] hjsonResources = resolver.getResources(this.rootURL + HJSON_EXTN);
         for (Resource resource : hjsonResources) {
